<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.billzhonggz.homework1.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/space_fit_text"/>

        <Button
            android:text="@string/plus_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plus_hundreds"
            android:layout_weight="1"
            />

        <Button
            android:text="@string/plus_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plus_tens"
            android:layout_weight="1"
            />

        <Button
            android:text="@string/plus_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plus_units"
            android:layout_weight="1"
            />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/make_a_guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/make_a_guess"
            android:layout_weight="0.78"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hundreds"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tens"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/units"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/space_fit_text"/>

        <Button
            android:text="@string/minor_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sub_hundreds"
            android:layout_weight="1"/>

        <Button
            android:text="@string/minor_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sub_tens"
            android:layout_weight="1"/>

        <Button
            android:text="@string/minor_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sub_units"
            android:layout_weight="1"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="InefficientWeight,UselessParent">

            <Button
                android:text="@string/restart"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/restart"
                android:layout_weight="1"
                android:textAllCaps="false"
                tools:ignore="NestedWeights"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
